exports[`client > reducers > commuter generic reducer tests should handle add commuter 1`] = `
Object {
  "commuter-2": Object {
    "_id": "commuter-2",
    "address": "4321 XYZ Boulevard",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.910822,
      "lng": -77.041094,
    },
    "country": "Made up land",
    "county": "Made up county",
    "email": "luke@warm.cold",
    "geocodeConfidence": 0.77,
    "groupId": "group-2",
    "name": "Luke Warm",
    "neighbourhood": undefined,
    "state": "Made up state",
  },
}
`;

exports[`client > reducers > commuter generic reducer tests should handle delete commuter 1`] = `Object {}`;

exports[`client > reducers > commuter generic reducer tests should handle set commuter 1`] = `
Object {
  "commuter-2": Object {
    "_id": "commuter-2",
    "address": "4321 XYZ Boulevard",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.910822,
      "lng": -77.041094,
    },
    "country": "Made up land",
    "county": "Made up county",
    "email": "luke@warm.cold",
    "geocodeConfidence": 0.77,
    "groupId": "group-2",
    "name": "Luke Warm",
    "neighbourhood": undefined,
    "state": "Made up state",
  },
  "commuter-3": Object {
    "_id": "commuter-3",
    "address": "9876 ABC Ct",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.912314,
      "lng": -77.033994,
    },
    "country": "Made up land",
    "county": "Made up county",
    "email": "sal@a.mander",
    "name": "Sal A. Mander",
    "neighbourhood": undefined,
    "state": "Made up state",
  },
}
`;

exports[`client > reducers > commuter generic reducer tests should handle set commuters 1`] = `
Object {
  "commuter-2": Object {
    "_id": "commuter-2",
    "address": "4321 XYZ Boulevard",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.910822,
      "lng": -77.041094,
    },
    "country": "Made up land",
    "county": "Made up county",
    "email": "luke@warm.cold",
    "geocodeConfidence": 0.77,
    "groupId": "group-2",
    "name": "Luke Warm",
    "neighbourhood": undefined,
    "state": "Made up state",
  },
}
`;

exports[`client > reducers > commuter should handle add group 1`] = `
Object {
  "new-commuter": Object {
    "_id": "new-commuter",
    "address": "4321 XYZ Boulevard",
    "email": "luke@warm.cold",
    "groupId": "new-group",
    "name": "Fake Commuter",
  },
}
`;

exports[`client > reducers > commuter should handle append commuters 1`] = `
Object {
  "commuter-2": Object {
    "_id": "commuter-2",
    "address": "4321 XYZ Boulevard",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.910822,
      "lng": -77.041094,
    },
    "country": "Made up land",
    "county": "Made up county",
    "email": "luke@warm.cold",
    "geocodeConfidence": 0.77,
    "groupId": "group-2",
    "name": "Luke Warm",
    "neighbourhood": undefined,
    "state": "Made up state",
  },
  "commuter-3": Object {
    "_id": "commuter-3",
    "address": "9876 ABC Ct",
    "city": "Megalopolis",
    "coordinate": Object {
      "lat": 38.912314,
      "lng": -77.033994,
    },
    "country": "Made up land",
    "county": "Made up county",
    "email": "sal@a.mander",
    "name": "Sal A. Mander",
    "neighbourhood": undefined,
    "state": "Made up state",
  },
}
`;
